chore: add typescript

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "git-commit-msg-linter": "^2.4.2"
+  "dependencies": {},
+  "devDependencies": {
+    "@types/node": "^13.13.5",
+    "git-commit-msg-linter": "^2.4.2",
+    "typescript": "^3.8.3"
   }
 }
